slider done; removed text drop on button click in firefox

--- a/css/button.css
+++ b/css/button.css
@@ -1,17 +1,18 @@
  button {
    width: 100;
    height: 50;
-   border-image-source: url(img/button/buttonDefault.png);
+   border-image-source: url(../img/button/buttonDefault.png);
    border-image-width: 1px;
    border-image-slice: fill 1 1 1 1;
  }
  
  button:hover {
-   border-image-source: url(img/button/buttonHover.png);
+   border-image-source: url(../img/button/buttonHover.png);
  }
  
  button:active {
-   border-image-source: url(img/button/buttonClick.png);
+   border-image-source: url(../img/button/buttonClick.png);
+   padding: 0px;
  }
  
  :focus:not(.focus-visible) {
