preparing for first upload

--- a/css/password.css
+++ b/css/password.css
@@ -10,6 +10,7 @@ input[type="password"]:hover:not(:active):not(:focus) {
 
 input[type="password"]:active, input[type="password"]:focus {
   border-color: #2C628B;
+  outline: none;
 }
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
